fixing row spacing

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -17,7 +17,6 @@
     .content-box{
         position:relative !important;
         width:100%;
-        margin-right:8%;
     }
 
     .content-item{
